@startuml
skinparam classAttributeIconSize 0



Order o-- OrderItem

OrderItem o-- PizzaInterface

PizzaSalmone *-- IngredientCheese
PizzaSalmone *-- IngredientSalmon
PizzaSalmone *-- IngredientDough

class Order {
	- ArrayList<OrderItem> items
	+ Order()
	+ ArrayList<OrderItem> getItems()
	+ void addOrderItem(OrderItem item)
}

abstract class Ingredient {
+ int value;
	+ String name;
	+int getValue()
	+void setValue(int value)
	+String getName()
}

interface PizzaInterface {
	void build()
	int getPrice()
	ArrayList<Ingredient> getIngredients()
}



class OrderItem {
 -PizzaInterface pizza;
	-int quantity;
	+PizzaInterface getPizza()
	+int getQuantity()
	+OrderItem(PizzaInterface pizza, int quantity)
}

class PizzaSalmone implements PizzaInterface {
	-IngredientOnion onion;
	-IngredientCheese cheese;
	-IngredientSalmon salmon;
	-IngredientDough dough;
	-int priceCents;
	+void build()
	+int getPrice()
	+ArrayList<Ingredient> getIngredients()
}
@enduml
